# M3U8Quicker

./: CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: release.yml
browser-extension/chrome/: README.md  background.js  content.js  injected-network.js  manifest.json
browser-extension/firefox/: background.js  content.js  manifest.json
scripts/: update-readme-download-links.mjs
src/: App.css  App.tsx  RootApp.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  downloader.rs  error.rs  ffmpeg.rs  lib.rs  models.rs  persistence.rs  playback.rs  preview.rs  state.rs  update.rs
src/components/: BatchDownloadModal.tsx  DownloadList.tsx  FirefoxIcon.tsx  NewDownloadModal.tsx  PreviewWindow.tsx  SettingsModal.tsx  Toolbar.tsx  ToolsModal.tsx  UpdateModal.tsx  VideoPreviewModal.tsx
src/services/: api.ts
src/types/: index.ts  settings.ts  update.ts
test-hls-server/src/: main.rs
