[package]
name = "m3u8quicker"
version = "1.0.8"
edition = "2021"
rust-version = "1.88"

[lib]
name = "m3u8quicker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["default-tls", "stream"] }
axum = { version = "0.8", default-features = false, features = ["http1", "query", "tokio"] }
m3u8-rs = "6"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
dirs = "6"
tokio-util = "0.7"
open = "5"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
hex = "0.4"
bytes = "1"
h264-reader = "0.8"
mp4 = "0.14"
ffmpeg-sidecar = "2"
strip-ansi-escapes = "0.2"
semver = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
